new file:   .gitignore     modified:   infering.ipynb 	modified:   yolo_segmentation.ipynb

--- a/infering.ipynb
+++ b/infering.ipynb
@@ -17,8 +17,11 @@
    ],
    "source": [
     "from roboflow import Roboflow\n",
+    "from dotenv import load_dotenv\n",
+    "!pip install python-dotenv\n",
     "\n",
-    "rf = Roboflow(api_key=\"ldQ5fDTzNpqJryn9OGOv\")\n",
+    "api_key = os.getenv(\"API_KEY\")\n",
+    "rf = Roboflow(api_key=api_key)\n",
     "project = rf.workspace().project(\"image_extraction-6dog0\")\n",
     "model = project.version(3).model\n",
     "\n",
