--- a/yolo_segmentation.ipynb
+++ b/yolo_segmentation.ipynb
@@ -185,9 +185,12 @@
    ],
    "source": [
     "!pip install roboflow\n",
+    "!pip install python-dotenv\n",
+    "\n",
     "\n",
     "from roboflow import Roboflow\n",
-    "rf = Roboflow(api_key=\"ldQ5fDTzNpqJryn9OGOv\")\n",
+    "api_key = os.getenv(\"API_KEY\")\n",
+    "rf = Roboflow(api_key=api_key)\n",
     "project = rf.workspace(\"kamran-oftea\").project(\"image_extraction-6dog0\")\n",
     "dataset = project.version(2).download(\"yolov5\")\n"
    ]
